# ComputerGraphics-OpenGL

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  conanfile.txt
assets/: cube.fs  simple-shader.fs  simple-shader.vs  simple.fs  simple.vs
assets/metaballs/shaders/: fragment.glsl  geometry.glsl  vertex.glsl
assets/nanosuit/: nanosuit.fs  nanosuit.vs
assets/shaders/: cubemap_fragment.glsl  light.vs  object.fs  object_fragment.glsl  object_vertex.glsl  torus.fs  torus_fragment.glsl  torus_vertex.glsl
assets/skybox/: skybox.fs  skybox.vs
assets/skybox/shaders/: fragment.glsl  vertex.glsl
assets/torus/: torus.vs
src/: buffers.h  camera.h  initials.h  main.cpp  settings.h  shader.cpp  shader.h
src/elements/: camera.h  car.h  controller.h  cubemap.h  light.h  metaballs.h  object.h  opengl.h  skybox.h  torus.h  window.h
src/utils/: buffers.h  camera.h  mesh.h  model.h  opengl.h  settings.h  shader.cpp  shader.h
